# abseil-demo

./: .gitignore  BUILD.bazel  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  WORKSPACE  cmake_install.cmake  hello  hello.cpp
.gcb/: cloudbuild.yaml
abseil-cpp/: Makefile  cmake_install.cmake
abseil-cpp/absl/: Makefile  cmake_install.cmake
abseil-cpp/absl/algorithm/: Makefile  cmake_install.cmake
abseil-cpp/absl/base/: Makefile  call_once.h  cmake_install.cmake  optimization.h
abseil-cpp/absl/base/internal/: invoke.h
abseil-cpp/absl/container/: Makefile  absl_container_header_only_dummy.cc  cmake_install.cmake
abseil-cpp/absl/debugging/: Makefile  cmake_install.cmake
abseil-cpp/absl/memory/: Makefile  cmake_install.cmake
abseil-cpp/absl/meta/: Makefile  cmake_install.cmake
abseil-cpp/absl/numeric/: Makefile  cmake_install.cmake
abseil-cpp/absl/strings/: Makefile  cmake_install.cmake
abseil-cpp/absl/synchronization/: Makefile  cmake_install.cmake
abseil-cpp/absl/time/: Makefile  cmake_install.cmake
abseil-cpp/absl/types/: Makefile  cmake_install.cmake
abseil-cpp/absl/utility/: Makefile  cmake_install.cmake
creds/: .gitignore
tools/: bazel.rc
