cc_binary(
	name="hello",
	srcs=["hello.cpp"],
	deps=[
		"@com_google_absl//absl/algorithm",
		"@com_google_absl//absl/base",
		"@com_google_absl//absl/memory",
		"@com_google_absl//absl/strings",
		"@com_google_absl//absl/synchronization",
		"@com_google_absl//absl/time",
		"@com_google_absl//absl/utility",
		],
)